<resources>
    <string name="app_name">Meetjyou_Android</string>

    <string name="onboarding_first_title">안녕하세요!</string>
    <string name="onboarding_first_description">저는 만쥬에요 만나서 반가워요 :)\n함께 할 멋진 여행을 준비했어요.</string>

    <string name="onboarding_second_title">함께 떠나는 여행, 즐거움이 두 배!</string>
    <string name="onboarding_second_description">다양한 사람들과 여행을 계획하고\n특별한 추억을 만들어 보세요.</string>

    <string name="onboarding_third_title">저와 함께 특별한 동행을 시작해볼까요?</string>

    <string name="bottom_navi_home">홈</string>
    <string name="bottom_navi_lounge">라운지</string>
    <string name="bottom_navi_party">파티</string>
    <string name="bottom_navi_travel">여행</string>
    <string name="bottom_navi_mypage">마이페이지</string>

    <string name="button_denied">거절</string>
    <string name="button_accept">수락</string>

    <string name="view_count_format">조회 %s</string>

    <string name="snackbar_recruitment_accept">동행 신청이 수락되었습니다.</string>
    <string name="snackbar_recruitment_denied">동행 신청이 거절되었습니다.</string>

    <string name="home_search">찾고 싶은 여행지나 키워드를 입력하세요</string>
    <string name="home_party_recruitment_title">파티 모집</string>
    <string name="home_party_recruitment_description">함께 떠날 동행자를\n모아보세요!</string>
    <string name="home_party_apply_title">파티 신청</string>
    <string name="home_party_apply_description">동행을 구해 함께\n여행을 떠나요!</string>
    <string name="home_hotparty_list_title">👀 지금 이 글은 시선집중!</string>
    <string name="home_location_recommendation_list_title">어디갈지 고민될 땐, 만나쥬 추천!</string>

</resources>